syntax = "proto3";

package scufflecloud.core.v1;

import "tinc/annotations.proto";
import "google/protobuf/timestamp.proto";

import "scufflecloud/core/v1/common.proto";

// Service for requesting WebAuthn challenges.
service WebauthnChallengesService {
    rpc CreateWebauthnChallenge(CreateWebauthnChallengeRequest) returns (CreateWebauthnChallengeResponse) {
        option (tinc.method).endpoint = {
            post: "/webauthn-challenges"
        };
    }
}

message CreateWebauthnChallengeRequest {
    CaptchaChallengeResponse captcha = 1;
}

message CreateWebauthnChallengeResponse {
    bytes challenge = 1;
}

message WebauthnChallenge {
    bytes nonce = 1;
    google.protobuf.Timestamp expires_at = 2;
}

message SignedWebauthnChallenge {
    // Protobuf encoded WebauthnChallenge.
    bytes challenge = 1;
    bytes signature = 2;
}
